wip: 🔗 Configure Github Action